# voice-studio

./: .gitignore  CLAUDE.md  README.md  studio.py
backend/: ace_step_worker.py  app.py  chatterbox_worker.py  cli.py  config.py  omnivoice_worker.py  pyproject.toml  qwen_worker.py  requirements-qwen.txt  requirements.txt  voxcpm_worker.py
backend/api/: asr.py  deps.py  download.py  engines.py  health.py  music.py  schemas.py  stream.py  synthesize.py  system.py  update.py  voices.py
backend/core/: engine_manager.py  exceptions.py  gpu_gate.py  hf_paths.py  model_cache.py  version.py
backend/core/asr/: __init__.py  (+1 more)
backend/scripts/: download_models.py
backend/services/: asr_cache.py  base_model_download.py  engine_uninstall.py  join_cache.py  lm_download.py  model_delete.py  model_download.py  synth_cache.py  synthesize.py  transcribe.py  update_check.py  update_run.py  voices.py
backend/tests/: conftest.py  test_app_warmup.py  test_asr_api.py  test_asr_engine.py  test_cache_concurrency.py  test_cache_isolation.py  test_cache_multiline.py  test_chatterbox_install.py  test_chatterbox_proxy.py  test_e2e.py  test_engine_languages.py  test_engine_uninstall.py  test_engines_capabilities.py  test_gpu_gate.py  test_model_download.py  test_omnivoice_proxy.py  test_qwen_engine.py  test_qwen_worker.py  test_setup_helpers.py  test_smoke.py  test_synthesize.py  test_system_vram.py  test_transcribe.py  test_update_api.py  test_update_check.py  test_update_run.py  test_version.py  test_version_api.py  test_voice_design.py  test_voice_transcribe.py  test_voxcpm_engine.py
(+73 files in other folders)
